objects/Checklist__c.object
<CustomObject>
    <fields>
        <fullName>Add_to_Applicable_Chatter_Groups__c</fullName>
        <label>Add to Applicable Chatter Groups</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None to Do</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Add_to_Public_Groups__c</fullName>
        <inlineHelpText>Current groups are: SF Admin, Support PTO Schedulers, VinManagers</inlineHelpText>
        <label>Add to Public Groups</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None to Do</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Add_to_VinSolutions_Chatter_Group__c</fullName>
        <label>Add to VinSolutions Chatter Group</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A-Already Existing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Appeal_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>appeal created to reconcile cancelled contract with new contract</inlineHelpText>
        <label>Appeal Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approved_PAN__c</fullName>
        <label>Approved PAN</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cancel_Contract_on_old_SVOC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancel Contract on old SVOC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Create_CR_for_Data_Merge__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>create a CR for the Salesforce team to move over any applicable data: opps, contacts, activities, etc</inlineHelpText>
        <label>Create CR for Data Merge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_VinSolutions_Contact__c</fullName>
        <label>Created VinSolutions Contact</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A-Already Existing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deactivate_New_Vin_ID__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>a new Vin ID is automatically created for the new SVOC.  need to deactivate this in VinConnect as Implementation will be using existing Vin ID</inlineHelpText>
        <label>Deactivate &quot;New&quot; Vin ID</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employee_Name__c</fullName>
        <label>Employee Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Re_branding_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>do we need to rebrand the email templates, photo overlays, website, etc</inlineHelpText>
        <label>Is Re-branding Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Checklists (New Account)</relationshipLabel>
        <relationshipName>Checklists1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_SVOC_Id_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New SVOC Id Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Previous_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>lookup the account record being sold</inlineHelpText>
        <label>Previous Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Checklists</relationshipLabel>
        <relationshipName>Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rebill_New_Contract_on_New_SVOC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rebill New Contract on New SVOC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reconcile_MRR_Differences__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reconcile MRR Differences</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_Appeal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Appeal</label>
        <referenceTo>Appeal__c</referenceTo>
        <relationshipLabel>Checklists</relationshipLabel>
        <relationshipName>Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_PAN__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related PAN</label>
        <referenceTo>PAN__c</referenceTo>
        <relationshipLabel>Checklists</relationshipLabel>
        <relationshipName>Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reset_Password__c</fullName>
        <description>regenerate password so the new employee will get an email to setup credentials</description>
        <inlineHelpText>regenerate password so the new employee will get an email to setup credentials</inlineHelpText>
        <label>Reset Password</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A-Already Existing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Review_3rd_Party_Vendors_Affected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Review 3rd Party Vendors Affected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SF_User_Created__c</fullName>
        <label>SF User Created</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A-Already Existing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Send_Email_from_the_PAN__c</fullName>
        <inlineHelpText>Email templates are in the Admin folder. Use New Employee Platform User template for VinPlatform users, New Employee Force.com Free User template for VinForce.com - Free users, and New Employee for all others.</inlineHelpText>
        <label>Send Email from the PAN</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Time_Off_Balance_Created__c</fullName>
        <label>Time Off Balance Created</label>
        <picklist>
            <picklistValues>
                <fullName>Jan 1: 144</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jan 2 - Feb 1: 132</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feb 2 - Mar 1: 120</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mar 2 - Apr 1: 108</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apr 2 - May 1: 96</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May 2 - Jun 1: 84</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jun 2 - Jul 1: 72</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jul 2 - Aug 1: 60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aug 2 - Sep 1: 48</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sep 2 - Oct 1: 36</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oct 2 - Nov 1: 24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nov 2 - Dec 1: 12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dec 2 - Dec 31: Speak with HR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No-Temp Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A-Already Existing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Time_Off_Balance_Owner_Reassigned__c</fullName>
        <inlineHelpText>Reassign the Time Off Balance to the employee it is for.</inlineHelpText>
        <label>Time Off Balance Owner Reassigned</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No-Temp Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A-Already Existing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Hire__c</fullName>
        <label>Type of Hire</label>
        <picklist>
            <picklistValues>
                <fullName>New Hire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rehire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temp/Cons</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Update_New_Account_w_Correct_Vin_ID__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update New Account w/Correct Vin ID</label>
        <type>Checkbox</type>
    </fields>
    <label>Checklist</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CHK-{00000000}</displayFormat>
        <label>Checklist Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checklists</pluralLabel>
    <recordTypes>
        <fullName>Buy_Sell_Process</fullName>
        <active>true</active>
        <description>checklist to ensure all departments have completed their action items</description>
        <label>Buy/Sell Process</label>
    </recordTypes>
    <recordTypes>
        <fullName>New_Employee_Setup</fullName>
        <active>true</active>
        <description>Used for creating new employees.</description>
        <label>New Employee Setup</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>